update create vm yaml

--- a/create_vm.yml
+++ b/create_vm.yml
@@ -31,5 +31,5 @@
       ignore_errors: true
 
     - name: Pause for 30 seconds to wait for Reboot
-      ansible.builtin.pause
+      ansible.builtin.pause:
         seconds: "30" 
