--- a/create_vm.yml
+++ b/create_vm.yml
@@ -5,7 +5,7 @@
   gather_facts: false
   tasks:
     - name: Clone template to new virtual machine
-      comminty.vmware.vmware_guest:
+      communinty.vmware.vmware_guest:
         validate_certs: false
         name: "{{ vm_name }}"
         template: template_ubuntu22
