--- a/create_vm.yml
+++ b/create_vm.yml
@@ -13,6 +13,15 @@
         folder: "/"
         state: poweredon
         wait_for_ip_address: true
+        disk:
+        - size_gb: 10
+          type: thin
+          datastore: g73_datastore
+        hardware:
+          memory_mb: 512
+          num_cpus: 1
+          num_cpu_cores_per_socket: 1
+          mem_limit: 1024
 
 - name: Set VM IP and Hostname 
   hosts: 192.168.0.200
@@ -26,7 +35,7 @@
     - name: Update Hostname
       ansible.builtin.hostname:
         name: "{{ hostname }}.host.vmadmin.local"
-        
+
     - name: Reboot
       ansible.builtin.command: "init 6"
       ignore_errors: true
