--- a/create-vm/roles/create-vm/tasks/create-vm.yml
+++ b/create-vm/roles/create-vm/tasks/create-vm.yml
@@ -10,7 +10,7 @@
     state: poweredon
     template: template_ubuntu22
     disk:
-      datastore: ds-cihvmdata01 
+    - datastore: ds-cihvmdata01 
     hardware:
       memory_mb: 1024
       num_cpus: 1
