add to cluster env

--- a/create-vm/roles/create-vm/tasks/create-vm.yml
+++ b/create-vm/roles/create-vm/tasks/create-vm.yml
@@ -6,6 +6,7 @@
     password: Fenerbahce1907
     validate_certs: false
     datacenter: cihdc
+    cluster: cihcluster
     folder: "/"
     name: "{{ vm_name }}"
     state: present
