--- a/state-vm/roles/state-vm/tasks/state-vm.yml
+++ b/state-vm/roles/state-vm/tasks/state-vm.yml
@@ -1,6 +1,6 @@
 ---
 - name: Wait for the virtual machine to shutdown
-  community.vmware.vmware_guest_powerstate:
+  vmware_guest:
     hostname: 192.168.0.201
     username: awxuser@vsphere.local
     password: Fenerbahce1907
