snapshot-vm.yaml update module

--- a/snapshot-vm/roles/snapshot-vm/tasks/snapshot-vm.yml
+++ b/snapshot-vm/roles/snapshot-vm/tasks/snapshot-vm.yml
@@ -7,7 +7,6 @@
     validate_certs: false
     name: "{{ vm_name }}"
     state: present
-    snapshot_name: snap1
-    description: snap1_description
+    snapshot_name: "{{ snapshot_name }}"
   delegate_to: localhost
   register: deploy
