--- a/snapshot-vm/roles/snapshot-vm/tasks/snapshot-vm.yml
+++ b/snapshot-vm/roles/snapshot-vm/tasks/snapshot-vm.yml
@@ -4,6 +4,7 @@
     hostname: 192.168.0.201
     username: awxuser@vsphere.local
     password: Fenerbahce1907
+    datacenter: "cihdc"
     validate_certs: false
     name: "{{ vm_name }}"
     state: present
