--- a/snapshot-vm/roles/snapshot-vm/tasks/snapshot-vm.yml
+++ b/snapshot-vm/roles/snapshot-vm/tasks/snapshot-vm.yml
@@ -5,7 +5,7 @@
     username: awxuser@vsphere.local
     password: Fenerbahce1907
     datacenter: "cihdc"
-    folder: "/{{ datacenter_name }}/{{ folder }}/"
+    folder: "/cihdc/{{ folder }}/"
     validate_certs: false
     name: "{{ vm_name }}"
     state: present
